fixes on mobile view

--- a/src/components/landing/ForBrands/ForBrands.module.css
+++ b/src/components/landing/ForBrands/ForBrands.module.css
@@ -22,11 +22,12 @@
 }
 
 .brandsImagesGlow {
-  border-radius: 395px;
+  aspect-ratio: 1;
+  border-radius: 50%;
   filter: blur(250px);
-  height: 395px;
+  max-width: 400px;
   opacity: 0.7;
-  width: 395px;
+  width: 100%;
   z-index: -1;
 }
 
@@ -34,6 +35,12 @@
 .brandsWindow1,
 .brandsWindow2 {
   position: absolute;
+}
+
+.brandsWindow1,
+.brandsWindow2 {
+  max-width: 400px;
+  width: 90%;
 }
 
 .brandsImage {
