--- a/src/components/landing/ForCollectors/ForCollectors.module.css
+++ b/src/components/landing/ForCollectors/ForCollectors.module.css
@@ -7,7 +7,10 @@
 
 .collectorsTitle {
   flex-direction: row;
-  gap: 24px;
+}
+
+.collectorsTitleAsterisk {
+  margin-left: 24px;
 }
 
 .collectorsImages {
@@ -20,11 +23,12 @@
 }
 
 .collectorsImagesGlow {
-  border-radius: 395px;
+  aspect-ratio: 1;
+  border-radius: 50%;
   filter: blur(250px);
-  height: 395px;
+  max-width: 400px;
   opacity: 0.7;
-  width: 395px;
+  width: 100%;
   z-index: -1;
 }
 
@@ -46,7 +50,9 @@
 
 .collectorsWindow {
   bottom: 0;
+  max-width: 350px;
   right: 0;
+  width: 90%;
   z-index: 2;
 }
 
